--- a/MetaCom/app/build.gradle
+++ b/MetaCom/app/build.gradle
@@ -28,5 +28,9 @@ dependencies {
     compile group: 'com.metarhia.jstp', name: 'jstp', version: '0.7.0'
     compile group: 'com.metarhia.jstp', name: 'jstp-compiler', version: '0.1.12'
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 }
