--- a/MetaCom/app/src/main/AndroidManifest.xml
+++ b/MetaCom/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
         </activity>
-        <activity android:name=".Connection.ConnectionActivity">
+        <activity android:name=".activities.connection.ConnectionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Chat.ChatActivity">
+        <activity android:name=".activities.chat.ChatActivity">
         </activity>
     </application>
 
