--- a/MetaCom/app/build.gradle
+++ b/MetaCom/app/build.gradle
@@ -39,4 +39,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.+'
     compile 'com.android.support:recyclerview-v7:25.+'
     testCompile 'junit:junit:4.12'
+
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.github.tony19:logback-android-core:1.1.1-6'
+    compile('com.github.tony19:logback-android-classic:1.1.1-6') {
+        // workaround issue #73
+        exclude group: 'com.google.android', module: 'android'
+    }
 }
