--- a/MetaCom/app/build.gradle
+++ b/MetaCom/app/build.gradle
@@ -35,9 +35,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.6.0'
     apt 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.android.support:cardview-v7:25.+'
-    compile 'com.android.support:recyclerview-v7:25.+'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 
     compile 'org.slf4j:slf4j-api:1.7.21'
