--- a/MetaCom/app/src/main/AndroidManifest.xml
+++ b/MetaCom/app/src/main/AndroidManifest.xml
@@ -25,6 +25,16 @@
         </activity>
         <activity android:name=".activities.chat.ChatActivity">
         </activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.metarhia.metacom.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/paths"/>
+        </provider>
     </application>
 
 </manifest>
