--- a/MetaCom/app/src/main/AndroidManifest.xml
+++ b/MetaCom/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name=".activities.MetaComApplication"
         android:allowBackup="true"
-        android:icon="@drawable/icon_app"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon_app"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
