--- a/MetaCom/app/src/main/AndroidManifest.xml
+++ b/MetaCom/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.metarhia.metacom.fileprovider"
+            android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
