--- a/MetaCom/app/src/main/AndroidManifest.xml
+++ b/MetaCom/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name=".activities.MetaComApplication"
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/metarhia_logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@drawable/metarhia_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
